--- a/XPuttyMan/Views/ViewOneSession.xaml
+++ b/XPuttyMan/Views/ViewOneSession.xaml
@@ -1,12 +1,121 @@
 ﻿<UserControl x:Class="XPuttyMan.Views.ViewOneSession"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:localViewModel="clr-namespace:XPuttyMan"
              xmlns:local="clr-namespace:XPuttyMan.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             mc:Ignorable="d"
+             d:DesignHeight="450"
+             d:DesignWidth="800">
+  <Grid>
+    <Border BorderBrush="DarkBlue"
+            BorderThickness="1"
+            CornerRadius="5"
+            Margin="2"
+            Name="InnerBorder"
+            DataContext="{Binding}"
+            d:DataContext="{Binding Source={x:Static localViewModel:VMPuttySession.DesignVMPuttySession}}">
+
+      <Border.Resources>
+        
+        <Style TargetType="Grid">
+          <Style.Triggers>
+            <Trigger Property="IsMouseOver"
+                     Value="True">
+              <Setter Property="Background"
+                      Value="Yellow" />
+            </Trigger>
+            <Trigger Property="IsMouseOver"
+                     Value="False">
+              <Setter Property="Background"
+                      Value="White" />
+            </Trigger>
+          </Style.Triggers>
+        </Style>
+
+      </Border.Resources>
+
+      <Grid Margin="2">
+        <Grid.RowDefinitions>
+          <RowDefinition />
+          <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" Name="CompleteSessionDisplay">
+          <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="90" />
+          </Grid.ColumnDefinitions>
+          <StackPanel Orientation="Vertical">
+            <StackPanel.Resources>
+              <Style TargetType="TextBlock">
+                <Setter Property="FontSize"
+                        Value="14" />
+                <Setter Property="HorizontalAlignment"
+                        Value="Left" />
+                <Setter Property="VerticalAlignment"
+                        Value="Center" />
+              </Style>
+            </StackPanel.Resources>
+            <TextBlock Text="{Binding Path=CleanName}"
+                       Width="550"
+                       FontWeight="Bold"
+                       Margin="10,0,0,0" />
+            <TextBlock Text="{Binding Path=HostName}"
+                       Width="550"
+                       Margin="20,2,0,5" />
+
+          </StackPanel>
+
+
+          <StackPanel Orientation="Horizontal"
+                      Grid.Column="1"
+                      Margin="5,0,0,0"
+                      VerticalAlignment="Center">
+            <StackPanel.Resources>
+              <Style TargetType="Image">
+                <Setter Property="HorizontalAlignment"
+                        Value="Center" />
+                <Setter Property="VerticalAlignment"
+                        Value="Center" />
+                <Style.Triggers>
+                  <Trigger Property="IsMouseOver"
+                           Value="True">
+                    <Setter Property="ToolTip"
+                            Value="{Binding Path=PuttyCommandLine}" />
+                  </Trigger>
+                </Style.Triggers>
+              </Style>
+            </StackPanel.Resources>
+            <Button Content="Start"
+                    Command="{Binding Path=CommandStartSession}"
+                    Margin="2"
+                    Padding="5,2,5,2" />
+            <Image Source="{Binding Path=RunningIcon}"
+                   Width="32"
+                   Height="32"
+                   Margin="5,2,5,2"
+                   VerticalAlignment="Center" />
+          </StackPanel>
+
+
+        </Grid>
+
+        <Border Grid.Row="1"
+                BorderBrush="Green"
+                BorderThickness="1"
+                CornerRadius="5"
+                Margin="5"
+                Visibility="{Binding Path=IsRemoteCommandVisible}">
+          <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <TextBlock Text="{Binding Path=RemoteCommand}"
+                       Margin="5,2,5,2" TextWrapping="Wrap" />
+          </ScrollViewer>
+        </Border>
+
+      </Grid>
+
+    </Border>
+  </Grid>
 </UserControl>
