--- a/XPuttyMan/Views/ViewOneSession.xaml
+++ b/XPuttyMan/Views/ViewOneSession.xaml
@@ -35,53 +35,33 @@
               <Trigger Property="IsMouseOver"
                        Value="True">
                 <Setter Property="Background"
-                        Value="Yellow" />
+                        Value="LightYellow" />
               </Trigger>
               <Trigger Property="IsMouseOver"
                        Value="False">
                 <Setter Property="Background"
-                        Value="White" />
+                        Value="Transparent" />
               </Trigger>
             </Style.Triggers>
           </Style>
         </Grid.Style>
         <Grid Grid.Row="0">
           <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="60" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="90" />
           </Grid.ColumnDefinitions>
           <Grid.ContextMenu>
-            <ContextMenu>
+            <ContextMenu Visibility="{Binding CanEditRemoteCommand, Converter={StaticResource BoolToVisibility}}">
               <MenuItem Header="Edit remote command"
                         Command="{Binding Path=CommandEditSessionRemoteCommand}"
-                        IsEnabled="{Binding Path=CanEditRemoteControl}" />
+                        IsEnabled="{Binding Path=CanEditRemoteCommand}" />
             </ContextMenu>
           </Grid.ContextMenu>
-          <StackPanel Orientation="Vertical">
-            <StackPanel.Resources>
-              <Style TargetType="TextBlock">
-                <Setter Property="FontSize"
-                        Value="14" />
-                <Setter Property="HorizontalAlignment"
-                        Value="Left" />
-                <Setter Property="VerticalAlignment"
-                        Value="Center" />
-              </Style>
-            </StackPanel.Resources>
-            <TextBlock Text="{Binding Path=CleanName}"
-                       Width="550"
-                       FontWeight="Bold"
-                       Margin="10,0,0,0" />
-            <TextBlock Text="{Binding Path=HostName}"
-                       Width="550"
-                       Margin="20,2,0,5" />
-
-          </StackPanel>
 
           <StackPanel Orientation="Horizontal"
-                      Grid.Column="1"
+                      Grid.Column="0"
                       Margin="5,0,0,0"
-                      VerticalAlignment="Center">
+                      VerticalAlignment="Center" HorizontalAlignment="Center">
             <StackPanel.Resources>
               <Style TargetType="Image">
                 <Setter Property="HorizontalAlignment"
@@ -105,9 +85,9 @@
                     VerticalContentAlignment="Center"
                     HorizontalAlignment="Center"
                     HorizontalContentAlignment="Center"
-                    Background="Transparent" BorderThickness="0"
-                    >
-              
+                    Background="Transparent"
+                    BorderThickness="0">
+
               <Button.Content>
                 <Image Source="{Binding Path=RunningIcon}"
                        Width="48"
@@ -117,6 +97,29 @@
               </Button.Content>
             </Button>
           </StackPanel>
+          
+          <StackPanel Orientation="Vertical" Grid.Column="1">
+            <StackPanel.Resources>
+              <Style TargetType="TextBlock">
+                <Setter Property="FontSize"
+                        Value="14" />
+                <Setter Property="HorizontalAlignment"
+                        Value="Left" />
+                <Setter Property="VerticalAlignment"
+                        Value="Center" />
+              </Style>
+            </StackPanel.Resources>
+            <TextBlock Text="{Binding Path=DisplayName}"
+                       Width="550"
+                       FontWeight="Bold"
+                       Margin="10,0,0,0" />
+            <TextBlock Text="{Binding Path=HostName}"
+                       Width="550"
+                       Margin="20,2,0,5" />
+
+          </StackPanel>
+
+          
 
         </Grid>
 
