--- a/XPuttyMan/Views/ViewSessionsList.xaml
+++ b/XPuttyMan/Views/ViewSessionsList.xaml
@@ -20,37 +20,59 @@
       <RowDefinition Height="30" />
     </Grid.RowDefinitions>
 
-    <ListView ItemsSource="{Binding Path=PuttySessions}"
-              Margin="10"
-              SnapsToDevicePixels="True"
-              SelectedItem="{Binding Path=SelectedSession}"
-              SelectionMode="Single"
-              ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+    
+      <ListView ItemsSource="{Binding Path=PuttySessions, Mode=OneWay}"
+                Margin="10"
+                SnapsToDevicePixels="True"
+                SelectionMode="Extended"
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                BorderThickness="0"
+              Selector.SelectionChanged="DataTemplate_SelectionChanged">
 
-      <ListView.ContextMenu>
+        
+        <ListView.GroupStyle>
+          <GroupStyle>
+            <GroupStyle.HeaderTemplate>
+              <DataTemplate>
+                <StackPanel Orientation="Horizontal">
+                  <TextBlock FontSize="18"
+                             FontWeight="Bold"
+                             Margin="0,10,0,2"
+                             Text="{Binding Path=Name}" />
+                  <TextBlock FontSize="18"
+                             FontWeight="Bold"
+                             Margin="0,10,0,2"
+                             Text="{Binding Path=ItemCount, StringFormat=' ({0})'}" />
+                </StackPanel>
+              </DataTemplate>
+            </GroupStyle.HeaderTemplate>
+          </GroupStyle>
+        </ListView.GroupStyle>
+
+        <!--<ListView.ContextMenu>
         <ContextMenu d:DataContext="{Binding Source={x:Static localViewModels:VMPuttySessionsList.DesignVMPuttySessionsList}}">
           <MenuItem Header="Export to file"
                     Command="{Binding Path=CommandExport}" />
         </ContextMenu>
-      </ListView.ContextMenu>
+      </ListView.ContextMenu>-->
 
-      <ListView.ItemTemplate>
-        <DataTemplate>
-          <localViews:ViewOneSession />
-        </DataTemplate>
-      </ListView.ItemTemplate>
+        <ListView.ItemTemplate>
+          <DataTemplate >
+            <localViews:ViewOneSession />
+          </DataTemplate>
+        </ListView.ItemTemplate>
 
-      <ListView.ItemContainerStyle>
-        <Style TargetType="ListViewItem">
-          <Setter Property="HorizontalContentAlignment"
-                  Value="Stretch" />
-        </Style>
-      </ListView.ItemContainerStyle>
+        <ListView.ItemContainerStyle>
+          <Style TargetType="ListViewItem">
+            <Setter Property="HorizontalContentAlignment"
+                    Value="Stretch" />
+          </Style>
+        </ListView.ItemContainerStyle>
 
-    </ListView>
+      </ListView>
 
-    <TextBlock Text="{Binding Path=SelectedSession.CleanName}"
+    <!--<TextBlock Text="{Binding Path=SelectedSession.CleanName}"
                Margin="5"
-               Grid.Row="1" />
+               Grid.Row="1" />-->
   </Grid>
 </UserControl>
